fix table overflow

--- a/scss/partials/_topic_overlay_edit.scss
+++ b/scss/partials/_topic_overlay_edit.scss
@@ -109,7 +109,7 @@ div.fullscreen-topic-edit {
       div.table-container{
         width: 100%;
         background-color: rgba(78, 90, 107, 0.05);
-        padding: 21px 10px 0px 10px;
+        padding: 21px 10px 0px 7px;
       }
 
       table.table{
